flag formatting for group photo, fixed spacing issue on ng listing, ng template listing on profile pages, allow new users to upload a photo

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -607,7 +607,8 @@ padding: 0;
 }
 
 .well.slim-well{
-  padding: 5px;
+  padding: 5px 15px;
+  min-height: 104px;
 }
 
 .well.footer{
